syntax = "proto3";

package twoonone;

option go_package = "protos/twoonone";

enum Role {
    ROLE_UNKNOWN = 0;
    ROLE_LANDOWNER = 1;
    ROLE_FARMER = 2;
}

message Card {
    enum Number {
        THREE = 0;
        FOUR = 1;
        FIVE = 2;
        SIX = 3;
        SEVEN = 4;
        EIGHT = 5;
        NINE = 6;
        TEN = 7;
        J = 8;
        Q = 9;
        K = 10;
        A = 11;
        TWO = 12;
        JOKER = 13;
        KING = 14;
    }

    Card.Number number = 1;
}

enum CardType {
    CARD_TYPE_UNKNOWN = 0; //未知
    CARD_TYPE_KING_BOOM = 1; //王炸
    CARD_TYPE_SINGLE = 2; //单牌
    CARD_TYPE_DOUBLE = 3; //双牌
    CARD_TYPE_THREE_CARD = 4; //三牌
    CARD_TYPE_THREE_WITH_SINGLE = 5; //三带一
    CARD_TYPE_THREE_WITH_DOUBLE = 6; //三带一对
    CARD_TYPE_BOOM = 7; //炸弹
    CARD_TYPE_FOUR_WITH_TWO_SINGLE = 8; //四带两
    CARD_TYPE_FOUR_WITH_TWO_DOUBLE = 9; //四带两对
    CARD_TYPE_SINGLE_SEQUENCE = 10; //顺子
    CARD_TYPE_DOUBLE_SEQUENCE = 11; //连对
    CARD_TYPE_AIR_SEQUENCE = 12; //纯飞机
    CARD_TYPE_AIR_SEQUENCE_WITH_TWO_SINGLE = 13; //飞机带两
    CARD_TYPE_AIR_SEQUENCE_WITH_TWO_DOUBLE = 14; //飞机带两对
}

message RobLandownerInfo {
    enum Action {
        ACTION_EMPTY = 0;
        ACTION_ROB = 1;
        ACTION_NO_ROB = 2;
    }

    Action action = 1;
    int64 action_time = 2;
}

message SendCard {
    PlayerInfo sender_info = 1;
    repeated Card sendcards = 2;
    CardType sendcard_type = 3;
    int32 sendcard_size = 4;
    int32 sendcard_continuous = 5; //顺子，连对等牌型有效
}

message PlayerInfo {
    message TableInfo {
        string room_hash = 1;
        RobLandownerInfo roblandowner_info = 2;
    }
    message UserInfo {
        string id = 1;
        string name = 2;
    }

    PlayerInfo.UserInfo user = 1;
    PlayerInfo.TableInfo table = 2;
}

enum RoomStage {
    ROOM_STAGE_UNKNOWN = 0;
    ROOM_STAGE_WAITTING_START = 1;
    ROOM_STAGE_ROB_LANDOWNERING = 2;
    ROOM_STAGE_SENDING_CARD = 3;
}

message RoomInfo {
    string hash = 1;
    repeated PlayerInfo player_infos = 2;
    double basic_coin = 3;
    int32 multiple = 4;
    RoomStage stage = 5;
    repeated SendCard sendcards = 6;
    optional PlayerInfo operator_now = 7;
}

// Extra List:
// "extra": 值为应用额外信息，格式为JWT，客户端无需(也无法)校验，必须携带，当客户端未携带extra或extra失效的情况下会产生

message GetRoomRequest {
    string room_hash = 1;
}

message GetRoomResponse {
    map<string, string> extra = 100;
    RoomInfo room_info = 1;
}

message CreateRoomRequest{}

message CreateRoomResponse {
    map<string, string> extra = 100;
    string room_hash = 1;
}

message JoinRoomRequest {
    string room_hash = 1;
    string user_id = 2;
}

message JoinRoomResponse{
    map<string, string> extra = 100;
}

message ExitRoomRequest {
    string user_id = 1;
    string room_hash = 2;
}

message ExitRoomResponse{
    map<string, string> extra = 100;
}

message RobLandownerRequest {
    string user_id = 1;
    string room_hash = 2;
}

message RobLandownerResponse{
    map<string, string> extra = 100;
}

message NoRobLandownerRequest {
    string user_id = 1;
    string room_hash = 2;
}

message NoRobLandownerResponse{
    map<string, string> extra = 100;
}

message SendCardRequest {
    string user_id = 1;
    string room_hash = 2;
    repeated Card sendcards = 3;
}

message SendCardResponse{
    map<string, string> extra = 100;
}

message NoSendCardRequest {
    string user_id = 1;
    string room_hash = 2;
}

message NoSendCardResponse{
    map<string, string> extra = 100;
}

message GetDailyCoinRequest {
    string user_id = 1;
}

message GetDailyCoinResponse{
    map<string, string> extra = 100;
}

message StartRoomRequest {
    string room_hash = 1;
    string user_id = 2;
}

message StartRoomResponse{
    map<string, string> extra = 100;
}

message GetRoomsRequest{}

message GetRoomsResponse {
    map<string, string> extra = 100;
    repeated RoomInfo room_infos = 1;
}

message RoomEventHandshake {
    string room_hash = 1;
    string user_id = 2;
}

message EventRoomResponse {
    message RoomJoinPlayer {
        PlayerInfo joiner_info = 1;
        repeated PlayerInfo player_infos = 2;
    }
    message RoomExitPlayer {
        PlayerInfo leaver_info = 1;
        repeated PlayerInfo player_infos = 2;
    }
    message RoomStarted {
        PlayerInfo next_operator_info = 1;
    }
    message RoomRobLandowner {
        PlayerInfo operator_info = 1;
        PlayerInfo next_operator_info = 2;
    }
    message RoomNoRobLandowner {
        PlayerInfo operator_info = 1;
        PlayerInfo next_operator_info = 2;
    }
    message RoomSendCard {
        PlayerInfo operator_info = 1;
        PlayerInfo next_operator_info = 2;
        repeated Card sendcards = 3;
    }
    message RoomNoSendCard {
        PlayerInfo operator_info = 1;
        PlayerInfo next_operator_info = 2;
    }
    

    message RobLandownerIntoSendingCard {
        PlayerInfo sendcarder_info = 1;
        repeated Card landowner_cards = 2;
    }
    message RobLandownerContinuousRob {
        int32 multiple = 1;
    }

    message SendCardSpringNotice {
        int32 multiple = 1;
    }
    message SendCardBoomNotice {
        int32 multiple = 1;
        PlayerInfo sendcarder_info = 2;
    }
    message SendCardKingBoomNotice {
        int32 multiple = 1;
        PlayerInfo sendcarder_info = 2;
    }
    message SendCardCardNumberNotice {
        int32 number = 1;
        PlayerInfo notice_target_info = 2;
    }

    message GameFinish {
        message PlayerInfoExtra {
            PlayerInfo player_info = 1;
            repeated Card hand_cards = 2;
        }

        PlayerInfoExtra landowner_info = 1;
        PlayerInfoExtra farmer1_info = 2;
        PlayerInfoExtra farmer2_info = 3;
        Role Winner = 4;
    }

    oneof Body {
        RobLandownerIntoSendingCard roblandowner_into_sendingcard = 1;
        RobLandownerContinuousRob roblandowner_continuous_rob = 2;
        SendCardSpringNotice sendcard_spring_notice = 3;
        SendCardBoomNotice sendcard_boom_notice = 4;
        SendCardKingBoomNotice sendcard_kingboom_notice = 5;
        GameFinish game_finish = 6;
        SendCardCardNumberNotice sendcard_cardnumber_notice = 7;
        RoomJoinPlayer room_join_player = 8;
        RoomExitPlayer room_exit_player = 9;
        RoomStarted room_started = 10;
        RoomRobLandowner room_rob_landowner = 11;
        RoomNoRobLandowner room_norob_landowner = 12;
        RoomSendCard room_sendcard = 13;
        RoomNoSendCard room_no_sendcard = 14;
    }
}